welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:16: error: ')' expected but 'else' found.
			else {setPos(getX()+1, getY())}
                        ^